2005-10-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric.

	<rdar://problem/4150976> Safari crashes in HTMLImageLoader::dispatchLoadEvent() on particular page (archive attached)

	I couldn't figure out how to make an automated test for this; even once I got DumpRenderTree
	to mouse in and out it did not crash.
	
        * khtml/html/html_imageimpl.cpp:
        (HTMLImageLoader::dispatchLoadEvent): Check if CachedImage is null before using it.

2005-10-05  David Harrison  <harrison@apple.com>

        Reviewed by Darin.

        No test cases added or changed because this patch does not address a bug.

        For clarity, renamed the "detach()" function to "destroy()" in the following classes:
        RenderObject (and subclasses),  BidiRun, ClipRects, InlineBox (and subclasses).
        
        * khtml/rendering/bidi.cpp:
        (khtml::BidiRun::destroy):
        (khtml::BidiRun::operator delete):
        (khtml::deleteBidiRuns):
        * khtml/rendering/bidi.h:
        * khtml/rendering/render_block.cpp:
        (khtml::RenderBlock::removeChild):
        (khtml::RenderBlock::updateFirstLetter):
        * khtml/rendering/render_box.cpp:
        (RenderBox::destroy):
        (RenderBox::dirtyLineBoxes):
        (RenderBox::position):
        (RenderBox::deleteLineBoxWrapper):
        * khtml/rendering/render_box.h:
        * khtml/rendering/render_container.cpp:
        (RenderContainer::destroy):
        (RenderContainer::updatePseudoChild):
        (RenderContainer::removeLeftoverAnonymousBoxes):
        * khtml/rendering/render_container.h:
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::deleteLineBoxes):
        (RenderFlow::destroy):
        * khtml/rendering/render_flow.h:
        * khtml/rendering/render_form.cpp:
        (RenderTextArea::destroy):
        * khtml/rendering/render_form.h:
        * khtml/rendering/render_layer.cpp:
        (khtml::ClipRects::operator delete):
        (khtml::ClipRects::destroy):